welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:7: error: value coupstylo is not a member of Unit
possible cause: maybe a semicolon is missing before `value coupstylo'?
                  else {gauche();gauche();coupstylo();avance()}}}coupstylo{};prendBiscuit()
                                                                 ^